--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,315 @@
-.App {
-  text-align: center;
+section{
+    padding: 58px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.grid{
+    display: grid;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.grid-tow-column{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+}
+
+/* 
+*Navbar Section
+ */
+
+nav{
+    padding: 15px 38px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.nav-heading ,
+.primary-heading{
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 32px;
+}
+
+.nav-links {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    align-items: center;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 24px;
+    letter-spacing: 0.2px;
+    color: #737373;
+    list-style: none;
+}
+
+
+.nav-right-align{
+   display: flex;
+   justify-content: flex-end;
+   align-items: center;
+   gap: 25px;
+}
+.cart-total{
+    margin-left: -18px;
+    color: #23A6F0;
+    font-size: small;
+    
+}
+
+.login-link{
+    text-decoration: none;
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: 700;
+    color: #23A6F0;
+    margin-left: -8px;
+}
+
+/* 
+*Main Banner
+*/
+.main-section{
+    display: flex;
+    position: relative;
+    gap: 20px;
+    max-width: 120rem ;
+    min-height: 100vh;
+    padding: 150px 122px;
+    background: linear-gradient(90deg, #96E9FB 0%, #ABECD6 100%);
+    border-radius: 20px;
+}
+
+.main-secondary-heading{
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.1px;
+    color: #2A7CC7;
+    margin-bottom: 30px;
+}
+
+.main-heading{
+    font-weight: 700;
+    font-size: 58px;
+    line-height: 80px;
+    letter-spacing: 0.2px;
+    color: #252B42;
+    margin-bottom: 30px;
+}
+
+.main-para{
+    width: 369px;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    letter-spacing: 0.2px;
+    color: #737373;
+    margin-bottom: 30px;
+}
+
+.main-cta{
+    width: 228px;
+    height: 62px;
+    padding: 15px 40px;
+    background: #23A6F0;
+    border: none;
+    border-radius: 5px;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 32px;
+    text-align: center;
+    letter-spacing: 0.1px;
+    color: #FFFFFF;
+    cursor: pointer;
+ }
+
+
+.main-banner{
+    position: absolute;
+    right: calc(50% - 100%/2 - 45px);
+    top: 1px;
+    
+}
+.main-img{
+    width: 690px;
+    min-height: 100vh;
+
+}
+
+/* 
+*Products
+*/
+.product-title{
+    margin-bottom: -48px;
+}
+
+
+.products-list{
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 20px;
+    overflow-x: auto;
+}
+
+.product-card {
+    width: 366px;
+    height: 100%;
+    flex: 0 0 auto;         
+    display: flex;          
+    flex-direction: column; 
+    position: relative;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    padding: 0 16px;
+}
+
+.product-img{
+    width: 100%;
+}
+
+.product-name{
+    font-weight: 600;
+    font-size: 13px;
+    /* line-height: 32px; */
+    letter-spacing: 0.1px;
+    color: #000000;
+    
+}
+
+.details-product{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+.striked-no{
+    text-decoration: line-through;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 32px;
+    letter-spacing: 0.1px;
+    text-decoration-line: line-through;
+    color: #444444;
+}
+
+.star{
+    height: 18px;
+}
+
+.price{
+    font-weight: 600;
+font-size: 24px;
+line-height: 32px;
+letter-spacing: 0.1px;
+color: #000000;
+margin-left: 8px;
+}
+
+.add-to-cart{
+    text-align: center;
+    padding: 6px 0;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 32px;
+    letter-spacing: 0.1px;
+    background: #23A6F0;
+    border-radius: 10px;
+    border: none;
+    color: #FFFFFF;
+    cursor: pointer;
+    margin-bottom: 20px;
+}
+
+/* 
+*Footer Section
+*/
+
+.footer{
+    display: flex;
+    align-items: center;
+    padding: 55px 195px;
+}
+.footer-social-icons {
+    margin-left: auto;
+}
+.social-icons > svg{
+    margin-right: 20px;
+}
+
+.footer-hr{
+    border: 0;
+    height: 1px;
+    background: #E6E6E6;
+    margin-bottom: 50px;
+}
+
+.footer-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    /* grid-template-columns: repeat(4, 1fr); */
+    /* grid-auto-rows: auto; */
+    /* grid-gap: 0; */
+    /* margin: 0 auto; */
+    max-width: 100%;
+    padding:0 180px;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .footer-grid h4{
+    margin-bottom: 20px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .footer-grid p{
+    margin-bottom: 10px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.2px;
+    color: #737373;
   }
+
+  .footer-grid form{
+    display: inline-flex;
+  }
+  .footer-email{
+    /* width: 100%; */
+    padding: 10px 40px 10px 20px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 28px;
+    letter-spacing: 0.2px;
+    color: #737373;
+    background: #F9F9F9;
+    border: 1px solid #E6E6E6;
+  }
+
+
+  .footer-cta{
+    padding: 15px 20px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 28px;
+    letter-spacing: 0.2px;
+    border: none;
+    background: #23A6F0;
+    border: 1px solid #E6E6E6;
+    border-radius: 0px 5px 5px 0px;
+    color: #FFFFFF;
+    cursor: pointer;
+  }
+
+  .footer-msg{
+    height: 74px;
+    max-width: 100vw;
+    background: #F9F9F9;
 }
+
+.footer-msg p{
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.2px;   
+    color: #737373;
+    padding: 25px 195px;
+  }
